--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- My css -->
     <link rel="stylesheet" href="style.css" />
 
-    <title>My fropil || Adittia Alfian Chandra</title>
+    <title>My Profil || Adittia Alfian Chandra</title>
   </head>
   <body id="home">
     <!-- Navbar -->
